squash! compose: Fix reply button width in closed compose box on mobile.

--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -25,6 +25,9 @@
         display: flex;
         flex-grow: 1;
 
+        /* Adjust flexbox default `min-width` to allow smaller container sizes. */
+        min-width: 0;
+
         /* Button-like styling */
         border-radius: 4px;
         background-color: hsl(0deg 0% 100%);
